# algomancy-docs

./: .readthedocs.yaml  LICENSE  pyproject.toml
docs/: requirements.txt
docs/source/: changelog.md  conf.py  index.md
docs/source/_static/: custom.css
docs/source/fundamentals/: algorithms.md  architecture.md  data.md  design_goals.md  fundamentals.md
docs/source/getting_started/: quickstart.md
docs/source/reference/: cli.md  content.md  data.md  gui.md  reference.md  scenario.md  utils.md
docs/source/reference/content/backend/: algorithm.md  etlfactory.md  inputconfig.md  kpi.md
docs/source/reference/content/pages/: page.md  placeholders.md  showcasehomepage.md  standardpages.md
docs/source/reference/data/: datamanager.md  datasource.md  etl.md  extractor.md  file.md  inputfileconfiguration.md  loader.md  schema.md  transformer.md  validator.md
docs/source/reference/gui/: admin.md  compare.md  configuration.md  data.md  home.md  overview.md  scenario.md
docs/source/reference/scenario/: algorithm.md  factory.md  kpi.md  result.md  scenario.md  scenariomanager.md
docs/source/reference/utils/: logger.md  parameters.md
docs/source/tutorial/: algorithms.md  etl.md  kpi.md  pages.md  results.md  tutorial.md
